<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:animateLayoutChanges="true">

    <TextView
      android:id="@+id/categoryLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:gravity="center"
      android:text="@string/label_game_select_category"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      android:textStyle="bold"/>

    <ScrollView
      android:id="@+id/categorySelection"
      android:layout_width="wrap_content"
      android:layout_height="150dp"
      android:layout_below="@+id/categoryLabel"
      android:layout_centerHorizontal="true"
      android:background="@color/black_trans20">

      <LinearLayout
        android:id="@+id/categoriesLayer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"/>
    </ScrollView>

    <TextView
      android:id="@+id/countLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/categorySelection"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="@dimen/spacing_4x"
      android:text="@string/label_game_select_count"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      android:textStyle="bold"/>

    <LinearLayout
      android:id="@+id/countSelectOptions"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/countLabel"
      android:layout_centerHorizontal="true"
      android:layout_gravity="center"
      android:background="@color/black_trans20"
      android:gravity="center"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/count1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/spacing_1x"
        android:tag="10"
        android:text="10"
        android:textColor="@color/white"/>

      <TextView
        android:id="@+id/count2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/spacing_1x"
        android:tag="20"
        android:text="20"
        android:textColor="@color/white"/>

      <TextView
        android:id="@+id/count3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/spacing_1x"
        android:tag="30"
        android:text="30"
        android:textColor="@color/white"/>

      <TextView
        android:id="@+id/count4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/spacing_1x"
        android:tag="50"
        android:text="50"
        android:textColor="@color/white"/>

      <TextView
        android:id="@+id/count5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/spacing_1x"
        android:tag="-1"
        android:text="All"
        android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
      android:id="@+id/hintDelayLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/countSelectOptions"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="@dimen/spacing_4x"
      android:text="@string/label_game_select_hint_delay"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      android:textStyle="bold"/>

    <LinearLayout
      android:id="@+id/hintDelayOptions"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/hintDelayLabel"
      android:layout_centerHorizontal="true"
      android:layout_gravity="center"
      android:background="@color/black_trans20"
      android:gravity="center"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/hintDelay1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/spacing_1x"
        android:tag="3000"
        android:text="3sec"
        android:textColor="@color/white"/>

      <TextView
        android:id="@+id/hintDelay2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/spacing_1x"
        android:tag="5000"
        android:text="5sec"
        android:textColor="@color/white"/>

      <TextView
        android:id="@+id/hintDelay3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/spacing_1x"
        android:tag="10000"
        android:text="10sec"
        android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/hintDelayOptions"
      android:layout_centerHorizontal="true"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/spacing_4x"
      android:orientation="horizontal">

      <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_2x"
        android:layout_marginRight="@dimen/spacing_2x"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_play_circle_outline_black_48dp"
        android:text="@string/label_game_play"/>

      <Button
        android:id="@+id/histories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_2x"
        android:layout_marginStart="@dimen/spacing_2x"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_history_black_48dp"
        android:text="@string/label_game_history"/>
    </LinearLayout>

  </RelativeLayout>

</RelativeLayout>